sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: Decimal integer literals may not have a leading zero. (Octal syntax is obsolete.)
    while(getValeur(pTemp)>vTemp && pTemp+1>01){copie(pTemp,pTemp+1);pTemp-=1}
                                            ^